<resources>
    <string name="app_name">鹏龙</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="login_user">用户名</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register">还没有账户?注册。</string>
    <string name="binding">已绑定手机号</string>
    <string name="verification">验证码</string>
    <string name="obtain_verification">获取验证码</string>
    <string name="new_password">新密码</string>
    <string name="sure">确认</string>
    <string name="register_user">输入用户名</string>
    <string name="register_password">输入密码(至少六位数)</string>
    <string name="register_again_password">重复输入密码</string>
    <string name="register_phone">输入手机号</string>
    <string name="register_verification">邀请码</string>
    <string name="register_btn">注册</string>
    <string name="location_city">当前定位城市</string>
    <string name="main_home">首页</string>
    <string name="main_forum">车友圈</string>
    <string name="main_service">生态圈</string>
    <string name="main_person">我的</string>
    <string name="conduct">品行</string>
    <string name="middle_invitation">邀请码</string>
    <string name="person_data">个人资料</string>
    <string name="person_authentication">绑定手机</string>
    <string name="person_friend">我的车友</string>
    <string name="person_representative">专属顾问</string>
    <string name="person_settings">功能设置</string>
    <string name="person_collection">我的收藏</string>
    <string name="photo_dialog">拍照</string>
    <string name="photo_dialog_select">从相册选取</string>
    <string name="photo_dialog_cancel">取消</string>
    <string name="camera_cancel">取消</string>
    <string name="camera_sure">确认</string>
    <string name="save">保存</string>
    <string name="inputname">请输入姓名</string>
    <string name="bound_phone">请输入手机号</string>
    <string name="sales_re">销售顾问</string>
    <string name="customer">售后顾问</string>
    <string name="leaving_message">给店内留言</string>
    <string name="location_switch">定位开关</string>
    <string name="clear_cache">清除缓存</string>
    <string name="version_number">版本号</string>
    <string name="exit_login">退出登录</string>
    <string name="middle_customer">售后顾问</string>
    <!--车友圈-->
    <string name="middle_post">发帖</string>
    <string name="all_type">所有类型</string>
    <string name="all_theam">全部主题</string>
    <string name="more_than">更多</string>
    <string name="essence">精华</string>
    <string name="newest">最新</string>
    <string name="population">热门</string>
    <string name="hot">热帖</string>
    <string name="benz_vehicles">爱车世界</string>
    <string name="xinghui_life">星徽生活</string>
    <string name="meet_ups">精彩活动</string>
    <string name="warm_heart">爱心社区</string>
    <string name="more_time">时间</string>
    <string name="more_sort">排序</string>
    <string name="post_time">发帖时间</string>
    <string name="reply">回复/查看</string>
    <string name="read">查看</string>
    <string name="one_day">一天</string>t
    <string name="two_day">两天</string>
    <string name="a_week">一周</string>
    <string name="one_month">一个月</string>
    <string name="three_month">三个月</string>
    <string name="all_time">全部时间</string>
    <string name="make_sure">确定</string>
    <string name="type">分类</string>
    <string name="title">标题：</string>
    <string name="content">内容：</string>
    <string name="edit_title">请输入标题</string>
    <string name="submit">提交</string>
    <string name="storeCustomer">店内客服</string>
    <string name="qrcode">扫图片,获取二维码</string>
    <string name="bindingcode">绑定</string>
    <string name="friend_riders">我的车友</string>
    <string name="friend_apply">好友申请</string>
    <string name="add_friend">加友</string>
    <string name="username">对方用户名</string>
    <string name="add">添加</string>
    <string name="accept">接受</string>
</resources>
