<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bound_phone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/realName"
    tools:context="com.kfc.productcar.ui.person.BoundPhoneActivity">
    <include
        android:id="@+id/bound_title"
        layout="@layout/activity_title_personin"></include>
    <EditText
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:layout_below="@id/bound_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_title"
        android:inputType="number"
        android:maxLength="11"
        android:hint="@string/bound_phone"
        android:id="@+id/bound_phone"/>
    <RelativeLayout
        android:id="@+id/bound_layout"
        android:layout_below="@id/bound_phone"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_title"
            android:inputType="number"
            android:hint="@string/verification"
            android:id="@+id/bound_code"/>
        <View
            android:layout_centerInParent="true"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@color/gray_deep"></View>
        <TextView
            android:id="@+id/bount_obtain"
            android:padding="10dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/obtain_verification"/>
    </RelativeLayout>
    <Button
        android:id="@+id/bound_sure"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:layout_below="@id/bound_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:textSize="20sp"
        android:background="@color/main_title"
        />

</RelativeLayout>
