<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_title_title" />

    <LinearLayout
        android:id="@+id/linear_forum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_bg"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_forum_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableRight="@mipmap/forum_select"
            android:text="@string/all_type"
            android:textColor="@color/gray_deep" />

        <Button
            android:id="@+id/btn_forum_theam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableRight="@mipmap/forum_select"
            android:text="@string/all_theam"
            android:textColor="@color/gray_deep" />

        <Button
            android:id="@+id/btn_forum_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableRight="@mipmap/forum_select"
            android:text="@string/more_than"
            android:textColor="@color/gray_deep" />
    </LinearLayout>

    <com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView
        android:id="@+id/pullLoadMoreRecyclerViewForum"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>