<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:fitsSystemWindows="true"
    tools:context="com.kfc.productcar.ui.main.RegisterActivity">

    <com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@null"
        app:layout_heightPercent="7%">

        <Button
            android:id="@+id/menu_back"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:drawableLeft="@mipmap/menu_back" />

        <TextView
            android:id="@+id/menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:maxEms="10"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="18sp"
            android:textColor="@color/main_title" />

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <View
        android:id="@+id/parting_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/login_title"
        android:background="@color/parting_line"></View>

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/parting_line"
        android:orientation="vertical"
        app:layout_marginLeftPercent="12%"
        app:layout_marginRightPercent="12%"
        app:layout_marginTopPercent="5%">

        <EditText
            style="@style/NewSignInEditText"
            android:id="@+id/register_user"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/edit_bg"
            android:inputType="textPersonName"
            app:layout_heightPercent="11%"
            android:nextFocusForward="@+id/register_password"
            android:hint="@string/register_user" />

        <EditText
            style="@style/NewSignInEditText"
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/edit_bg"
            android:inputType="textPassword"
            app:layout_heightPercent="11%"
            android:nextFocusForward="@+id/register_again_password"
            app:layout_marginTopPercent="3%"
            android:hint="@string/register_password" />

        <EditText
            style="@style/NewSignInEditText"
            android:id="@+id/register_again_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/edit_bg"
            android:inputType="textPassword"
            app:layout_heightPercent="11%"
            android:nextFocusForward="@+id/register_phone"
            app:layout_marginTopPercent="3%"
            android:hint="@string/register_again_password" />

        <EditText
            style="@style/NewSignInEditText"
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/edit_bg"
            android:inputType="phone"
            app:layout_heightPercent="11%"
            android:nextFocusForward="@+id/register_verification"
            app:layout_marginTopPercent="3%"
            android:maxLength="11"
            android:hint="@string/register_phone" />
        <com.zhy.android.percent.support.PercentRelativeLayout
            android:id="@+id/code_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_marginTopPercent="3%"
            android:background="@mipmap/edit_bg"
            app:layout_heightPercent="11%"
            android:visibility="gone">

            <EditText
                style="@style/NewSignInEditText"
                android:id="@+id/register_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:nextFocusForward="@+id/register_verificationcode"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/verification" />

            <TextView
                android:id="@+id/register_obtainverification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:paddingRight="20dp"
                android:textSize="18sp"
                android:textColor="@color/login_text"
                android:drawableLeft="@mipmap/line"
                android:drawablePadding="10dp"
                android:text="@string/obtain_verification" />
        </com.zhy.android.percent.support.PercentRelativeLayout>

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_marginTopPercent="3%"
            android:background="@mipmap/edit_bg"
            app:layout_heightPercent="11%">

            <EditText
                style="@style/NewSignInEditText"
                android:id="@+id/register_verificationcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:nextFocusForward="@+id/forget_new_password"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/register_verification" />
            <TextView
                android:id="@+id/register_verificationImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_widthPercent="20%"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableRight="@mipmap/reg_qrcode"
                app:layout_marginRightPercent="10%"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_centerVertical="true"
                app:layout_heightPercent="65%"
                app:layout_marginRightPercent="25%"
                android:layout_alignParentRight="true"
                android:src="@mipmap/line"
                />
        </com.zhy.android.percent.support.PercentRelativeLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@mipmap/btn_bg"
            app:layout_heightPercent="11%"
            app:layout_marginTopPercent="4%"
            android:textSize="18sp"
            android:textColor="@color/login_text"
            android:text="@string/register_btn" />
    </com.zhy.android.percent.support.PercentLinearLayout>

</com.zhy.android.percent.support.PercentRelativeLayout>
