<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgetpassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:fitsSystemWindows="true"
    tools:context="com.kfc.productcar.ui.main.Forget_PasswordActivity">

    <com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@null"
        app:layout_heightPercent="7%">

        <Button
            android:id="@+id/menu_back"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:drawableLeft="@mipmap/menu_back" />

        <TextView
            android:id="@+id/menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:maxEms="10"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="18sp"
            android:textColor="@color/main_title" />

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <View
        android:id="@+id/parting_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/login_title"
        android:background="@color/parting_line"></View>

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_marginLeftPercent="12%"
        app:layout_marginRightPercent="12%"
        android:layout_below="@id/parting_line"
        android:orientation="vertical">

        <EditText
            style="@style/NewSignInEditText"
            android:id="@+id/forget_binding"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/edit_bg"
            android:inputType="phone"
            app:layout_heightPercent="12%"
            app:layout_marginTopPercent="10%"
            android:nextFocusForward="@+id/forget_verification"
            android:maxLength="11"
            android:hint="@string/binding" />

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_marginTopPercent="5%"
            android:background="@mipmap/edit_bg"
            app:layout_heightPercent="12%">

            <EditText
                style="@style/NewSignInEditText"
                android:id="@+id/forget_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:nextFocusForward="@+id/forget_newpassword"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/verification" />

            <TextView
                android:id="@+id/forget_obtainverification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:paddingRight="20dp"
                android:textSize="18sp"
                android:textColor="@color/login_text"
                android:drawableLeft="@mipmap/line"
                android:drawablePadding="10dp"
                android:text="@string/obtain_verification" />
        </com.zhy.android.percent.support.PercentRelativeLayout>

        <EditText
            style="@style/NewSignInEditText"
            android:id="@+id/forget_newpassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/edit_bg"
            android:inputType="textPassword"
            app:layout_heightPercent="12%"
            app:layout_marginTopPercent="5%"

            android:hint="@string/new_password" />

        <Button
            android:id="@+id/forget_sure"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@mipmap/btn_bg"
            app:layout_heightPercent="12%"
            app:layout_marginTopPercent="5%"
            android:textSize="18sp"
            android:textColor="@color/login_text"
            android:text="@string/sure" />
    </com.zhy.android.percent.support.PercentLinearLayout>

</com.zhy.android.percent.support.PercentRelativeLayout>
