<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_function_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/realName"
    android:fitsSystemWindows="true"
    tools:context="com.kfc.productcar.ui.person.FunctionSettingActivity">
    <include
        layout="@layout/activity_title_personin"
        android:id="@+id/setting_title"></include>
    <LinearLayout
        android:padding="10dp"
        android:layout_below="@id/setting_title"
        android:id="@+id/clear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/status_color"
            android:id="@+id/clearCache"
            android:text="@string/clear_cache"/>
        <TextView
            android:id="@+id/cachesize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/gray_deep"
            />
    </LinearLayout>
    <View
        android:layout_marginLeft="15dp"
        android:layout_below="@id/clear_layout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"></View>
    <LinearLayout
        android:padding="10dp"
        android:layout_below="@id/clear_layout"
        android:id="@+id/version_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/status_color"
            android:text="@string/version_number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/gray_deep"
            android:text="1"/>
    </LinearLayout>
    <View
        android:layout_marginLeft="15dp"
        android:layout_below="@id/version_layout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"></View>
    <Button
        android:layout_marginTop="30dp"
        android:layout_below="@id/version_layout"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:textColor="@color/main_title"
        android:background="@drawable/person_gold"
        android:layout_centerHorizontal="true"
        android:id="@+id/exit_login"
        android:textSize="18sp"
        android:text="@string/exit_login"/>

</RelativeLayout>
